# wnba_sports_etl

./: .gitignore  LICENSE  README.md  pyproject.toml  wnba_etl_exploration.ipynb
data/: teamstats_10_yr_clean.csv  teamstats_11_yr_clean.csv  teamstats_2025_1stQtr_clean.csv  teamstats_clean.csv  wnba_2025_game_ids.json  wnba_2025_starter_consistency.json  wnba_2025_starters.json  wnba_gamelogs_2015_2024.csv  wnba_gamelogs_2025_1stQtr.csv
icons/: gabby_williams.webp:Zone.Identifier
notebooks/: playher_ai_jul_25.ipynb  scrape_wnba_box_scores_2014_2023.ipynb  wnba_etl_demo.ipynb
scripts/: get_wnba_game_ids.py  run_etl.py  test_scrape_nwsl.py  update_game_ids.py
sports_etl/: config.py
sports_etl/api/: espn_utils.py
sports_etl/app/: app.py  callbacks.py
sports_etl/etl/: extract.py  load.py  scrape_wnba_stats.py  transform.py
sports_etl/nwsl/etl/: scrape_nwsl_to_db.py
sports_etl/utils/: logger.py
sports_etl/viz/: color_maps.py  styling.py
sports_etl/wnba/utils/: download_ig_posts.py
sports_etl/wnba/viz/: court_layout.py
